2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/i386/pc/grub-setup.c: Merge this ...
	* util/sparc64/ieee1275/grub-setup.c:  ... and this ...
	* util/grub-setup.c: ... into this.
	* include/grub/sparc64/ieee1275/boot.h (grub_boot_blocklist) [ASM_FILE]:
	New struct.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ext2.c (grub_ext2_open): Use return error value when
	possible.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/sun.c (sun_partition_map_iterate): Don't needlesly
	allocate p.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig_lib.in (prepare_grub_to_access_device): Add
	explicit root argument to set to prevent UUID to be interpreted as
	argument to set.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/sparc64/ieee1275/crt0.S: Align stack.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't export grub_gate_a20.

	* grub-core/kern/i386/pc/init.c: Remove leftovers.
	* grub-core/kern/i386/pc/startup.S (FUNCTION(grub_gate_a20)): Rename
	to ...
	(grub_gate_a20): ... this. All users updated.
	* include/grub/i386/pc/init.h: Removed. All users updated.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Create euro.pf2 which supports most European languages.

	* Makefile.am (grubdata_DATA): Add euro.pf2.
	(euro.pf2): New target.
	(CLEANFILES): Add euro.pf2.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Disable emu-usb by default to prevent inadvertent
	device takeover.

2010-09-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Disable usbserial on grub-emu since our libusb code isn't good enough
	yet.

	* grub-core/Makefile.core.def (usbserial_common): Disable on emu.
	(usbserial_pl2303): Likewise.
	(usbserial_ftdi): Likewise.

2010-09-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/disk.h (grub_disk): Remove has_partitions.
	All users updated.